test/corpus/variant.txt
====
Single variant
====

singleprecision int_part(idv) = idv : _,!;

---
(source_file
  (variant)
  (function_definition
    (identifier)
    (parameters
      (parameter))
    (sequential
      (identifier)
      (parallel (wire) (cut)))))

====
Two variants
====

doubleprecision quadprecision int_part(idv) = int(idv);

---
(source_file
  (variant)
  (variant)
  (function_definition
    (identifier)
    (parameters
      (parameter))
    (prefix_op
      (op (int_cast))
      (identifier))))
